--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.3.3",
-    "@react-three/drei": "^9.108.1",
-    "@react-three/fiber": "^8.16.8",
-    "@types/three": "^0.166.0",
-    "framer-motion": "^11.2.13",
-    "maath": "^0.10.7",
+    "@emailjs/browser": "4.3.3",
+    "@react-three/drei": "^9.88.13",
+    "@react-three/fiber": "^8.13.5",
+    "@types/three": "0.153.0",
+    "framer-motion": "10.16.4",
+    "maath": "^0.10.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.24.1",
+    "react-router-dom": "^7.6.2",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.166.1"
+    "react-vertical-timeline-component": "^3.5.3",
+    "three": "^0.153.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
