--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://TamimOp.github.io/",
+  "homepage": "https://TamimOp.github.io/Portfolio",
   "name": "3d-portfolio",
   "private": true,
   "version": "0.0.0",
